--- a/css/x-tag-components.css
+++ b/css/x-tag-components.css
@@ -399,13 +399,15 @@ x-page[active]:not([transition="inactive"]) > * {
 
 x-peekbox {
   display: block;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   max-width: 100%;
   max-height: 100%;
   background: #fff;
+  contain: layout style;
+  will-change: -webkit-transform, transform;
   -webkit-transform: translate(-100%, 0);
   -moz-transform: translate(-100%, 0);
   -ms-transform: translate(-100%, 0);
@@ -418,7 +420,6 @@ x-peekbox {
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-  will-change: -webkit-transform, transform;
 }
 
 x-peekbox[edge="top"] {
